syntax = "proto3";
option java_multiple_files = true;
option java_package = "generated.grpc.InventoryRefill";
option java_outer_classname = "InventoryRefillImpl";


package retail;

service InventoryRestock {
    // Client streams multiple restock requests before receiving a summary (Client Streaming)
    rpc BulkRestock(stream RestockRequest) returns (RestockSummary);
}

message RestockRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message RestockSummary {
    int32 total_processed = 1;
    int32 total_failed = 2;
}
                     

