syntax = "proto3";
option java_multiple_files = true;
option java_package = "generated.grpc.SalesHeatmap";
option java_outer_classname = "SalesHeatmapImpl";

package retail;

service SalesHeatmap {
    // Send sales performance from different areas
    rpc GenerateSalesPerformance(EmptyRequest) returns (SalesPerformanceResponse);

    // Suggest location changes based on performance
    rpc SuggestProductRelocation(RelocationRequest) returns (RelocationResponse);
}

message SalesRequest {
    string section_id = 1;
}

message SalesUpdate {
    string section_id = 1;
    int32 new_sales = 2;
    string timestamp = 3;
}

message EmptyRequest {}

message SalesPerformanceResponse {
    repeated AreaPerformance performances = 1;
}

message AreaPerformance {
    string area_id = 1;
    int32 sales = 2;
}

message RelocationRequest {
    repeated AreaPerformance performances = 1;
}

message RelocationResponse {
    repeated string suggestions = 1;
}
